force-app/main/default/objects/VCG_CPQ_Security_Restriction__c/VCG_CPQ_Security_Restriction__c.object-meta.xml
<CustomObject>
    <label>VCG CPQ Security Restriction</label>
    <nameField>
        <label>VCG CPQ Security Restriction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VCG CPQ Security Restrictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>