force-app/main/default/objects/VCG_CPQ_Security_Restriction__c/fields/Assoc_Restriction_Level_Name__c.field-meta.xml
<CustomField>
    <fullName>Assoc_Restriction_Level_Name__c</fullName>
    <description>The name associated with the Restriction Level. Ex: if Restriction Level = &apos;Profile&apos; an associated Profile Name such as &apos;System Administrator&apos; would be added here to determine which Profile is Restricted.</description>
    <label>Assoc. Restriction Level Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>