force-app/main/default/objects/VCG_CPQ_Security_Restriction__c/fields/Functional_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Functional_Restriction__c</fullName>
    <label>Functional Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Export to Excel</fullName>
            </value>
            <value>
                <fullName>Export to PDF</fullName>
            </value>
            <value>
                <fullName>Export to Word</fullName>
            </value>
            <value>
                <fullName>Edit Uplift</fullName>
            </value>
            <value>
                <fullName>Edit Discount</fullName>
            </value>
            <value>
                <fullName>View Pricing Results</fullName>
            </value>
            <value>
                <fullName>Override Pricing Results</fullName>
            </value>
            <value>
                <fullName>Create Product Groups</fullName>
            </value>
            <value>
                <fullName>Edit Annual Unit Discount</fullName>
            </value>
            <value>
                <fullName>Edit Annual Unit Uplift</fullName>
            </value>
            <value>
                <fullName>Edit Monthly Unit Discount</fullName>
            </value>
            <value>
                <fullName>Edit Monthly Unit Uplift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>