force-app/main/default/objects/VCG_CPQ_Security_Restriction__c/fields/Has_Access__c.field-meta.xml
<CustomField>
    <fullName>Has_Access__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has Access</label>
    <type>Checkbox</type>
</CustomField>