force-app/main/default/objects/VCG_CPQ_Security_Restriction__c/fields/Restriction_Level__c.field-meta.xml
<CustomField>
    <fullName>Restriction_Level__c</fullName>
    <label>Restriction Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>