force-app/main/default/objects/VCG_CPQ_Security_Restriction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assoc_Restriction_Level_Name__c</columns>
    <columns>Restriction_Level__c</columns>
    <columns>Functional_Restriction__c</columns>
    <columns>Has_Access__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>